// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`injectGlobal babel 6 dynamic change import 1`] = `
"
import { injectGlobal as inject } from 'emotion';
inject('body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}');
injectGlobal\`
      body {
        margin: 0;
        padding: 0;
        & > div {
          display: flex;
        }
      }
      html {
        background: green;
      }
    \`;"
`;

exports[`injectGlobal babel 6 injectGlobal basic 1`] = `
"
injectGlobal(\\"body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}\\");"
`;

exports[`injectGlobal babel 6 injectGlobal with interpolation 1`] = `
"
injectGlobal(\\"body{margin:0;padding:0;display:\\", display, \\";& > div{display:none;}}html{background:green;}\\");"
`;

exports[`injectGlobal babel 6 static change import 1`] = `
"
inject(\\"body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}\\");
injectGlobal\`
      body {
        margin: 0;
        padding: 0;
        & > div {
          display: flex;
        }
      }
      html {
        background: green;
      }
    \`;"
`;

exports[`injectGlobal babel 6 with @font-face 1`] = `"injectGlobal(\\"@font-face{font-family:'Patrick Hand SC';font-style:normal;font-weight:400;src:local('Patrick Hand SC'),local('PatrickHandSC-Regular'),url(https://fonts.gstatic.com/s/patrickhandsc/v4/OYFWCgfCR-7uHIovjUZXsZ71Uis0Qeb9Gqo8IZV7ckE.woff2) format('woff2');unicode-range:U+0100-024f,U+1-1eff,U+20a0-20ab,U+20ad-20cf,U+2c60-2c7f,U+A720-A7FF;}\\");"`;

exports[`injectGlobal babel 7 dynamic change import 1`] = `
"import { injectGlobal as inject } from 'emotion';
inject(\\"body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}\\");
injectGlobal\`
      body {
        margin: 0;
        padding: 0;
        & > div {
          display: flex;
        }
      }
      html {
        background: green;
      }
    \`;"
`;

exports[`injectGlobal babel 7 injectGlobal basic 1`] = `"injectGlobal(\\"body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}\\");"`;

exports[`injectGlobal babel 7 injectGlobal with interpolation 1`] = `"injectGlobal(\\"body{margin:0;padding:0;display:\\", display, \\";& > div{display:none;}}html{background:green;}\\");"`;

exports[`injectGlobal babel 7 static change import 1`] = `
"inject(\\"body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}\\");
injectGlobal\`
      body {
        margin: 0;
        padding: 0;
        & > div {
          display: flex;
        }
      }
      html {
        background: green;
      }
    \`;"
`;

exports[`injectGlobal babel 7 with @font-face 1`] = `"injectGlobal(\\"@font-face{font-family:'Patrick Hand SC';font-style:normal;font-weight:400;src:local('Patrick Hand SC'),local('PatrickHandSC-Regular'),url(https://fonts.gstatic.com/s/patrickhandsc/v4/OYFWCgfCR-7uHIovjUZXsZ71Uis0Qeb9Gqo8IZV7ckE.woff2) format('woff2');unicode-range:U+0100-024f,U+1-1eff,U+20a0-20ab,U+20ad-20cf,U+2c60-2c7f,U+A720-A7FF;}\\");"`;

exports[`injectGlobal extract babel 6 dynamic change import 1`] = `
"import './emotion.emotion.css';

import { injectGlobal as inject } from 'emotion';
undefined;
injectGlobal\`
      body {
        margin: 0;
        padding: 0;
        & > div {
          display: flex;
        }
      }
      html {
        background: green;
      }
    \`;


emotion.emotion.css
body{margin:0;padding:0;}body > div{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}html{background:green;}"
`;

exports[`injectGlobal extract babel 6 injectGlobal basic 1`] = `
"require(\\"./emotion.emotion.css\\");

undefined;


emotion.emotion.css
body{margin:0;padding:0;}body > div{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}html{background:green;}"
`;

exports[`injectGlobal extract babel 6 injectGlobal with interpolation 1`] = `
"
injectGlobal(\\"body{margin:0;padding:0;display:\\", display, \\";& > div{display:none;}}html{background:green;}\\");"
`;

exports[`injectGlobal extract babel 6 static change import 1`] = `
"require(\\"./emotion.emotion.css\\");

undefined;
injectGlobal\`
      body {
        margin: 0;
        padding: 0;
        & > div {
          display: flex;
        }
      }
      html {
        background: green;
      }
    \`;


emotion.emotion.css
body{margin:0;padding:0;}body > div{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}html{background:green;}"
`;

exports[`injectGlobal extract babel 6 with @font-face 1`] = `
"require(\\"./emotion.emotion.css\\");

undefined;


emotion.emotion.css
@font-face{font-family:'Patrick Hand SC';font-style:normal;font-weight:400;src:local('Patrick Hand SC'),local('PatrickHandSC-Regular'), url(https://fonts.gstatic.com/s/patrickhandsc/v4/OYFWCgfCR-7uHIovjUZXsZ71Uis0Qeb9Gqo8IZV7ckE.woff2) format('woff2');unicode-range:U+0100-024f,U+1-1eff,U+20a0-20ab,U+20ad-20cf, U+2c60-2c7f,U+A720-A7FF;}"
`;

exports[`injectGlobal extract babel 7 dynamic change import 1`] = `
"import \\"./emotion.emotion.css\\";
import { injectGlobal as inject } from 'emotion';
undefined;
injectGlobal\`
      body {
        margin: 0;
        padding: 0;
        & > div {
          display: flex;
        }
      }
      html {
        background: green;
      }
    \`;


emotion.emotion.css
body{margin:0;padding:0;}body > div{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}html{background:green;}"
`;

exports[`injectGlobal extract babel 7 injectGlobal basic 1`] = `
"require(\\"./emotion.emotion.css\\");

undefined;


emotion.emotion.css
body{margin:0;padding:0;}body > div{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}html{background:green;}"
`;

exports[`injectGlobal extract babel 7 injectGlobal with interpolation 1`] = `"injectGlobal(\\"body{margin:0;padding:0;display:\\", display, \\";& > div{display:none;}}html{background:green;}\\");"`;

exports[`injectGlobal extract babel 7 static change import 1`] = `
"require(\\"./emotion.emotion.css\\");

undefined;
injectGlobal\`
      body {
        margin: 0;
        padding: 0;
        & > div {
          display: flex;
        }
      }
      html {
        background: green;
      }
    \`;


emotion.emotion.css
body{margin:0;padding:0;}body > div{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}html{background:green;}"
`;

exports[`injectGlobal extract babel 7 with @font-face 1`] = `
"require(\\"./emotion.emotion.css\\");

undefined;


emotion.emotion.css
@font-face{font-family:'Patrick Hand SC';font-style:normal;font-weight:400;src:local('Patrick Hand SC'),local('PatrickHandSC-Regular'), url(https://fonts.gstatic.com/s/patrickhandsc/v4/OYFWCgfCR-7uHIovjUZXsZ71Uis0Qeb9Gqo8IZV7ckE.woff2) format('woff2');unicode-range:U+0100-024f,U+1-1eff,U+20a0-20ab,U+20ad-20cf, U+2c60-2c7f,U+A720-A7FF;}"
`;
